# CLionProjectWithGTest

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  Printer.cpp  Printer.hpp  main.cpp
tests/: CMakeLists.txt  PrinterTests.cpp  PrinterTests.hpp
